Update: Library description

--- a/library.properties
+++ b/library.properties
@@ -5,6 +5,6 @@ maintainer=nguyenmanhthao996tn <manhthao.spm@gmail.com>
 sentence=An Arduino library for building a Unconfirmed Data Up LoRaWAN packet
 paragraph=Low-resource requirements (Tested on ATMEGA328)
 category=Communication
-url=
+url=https://github.com/nguyenmanhthao996tn/lorawan-packet-builder
 architectures=*
 includes=lorawan_builder.h
